--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -54,3 +54,19 @@
   gap: $space;
   grid-template-columns: repeat($columns, 1fr);
 }
+
+@mixin heading{
+  font-weight: 400;
+  span{
+    font-weight: 700;
+  }
+
+  &::after{
+    content: "";
+    display: block;
+    height: 1rem;
+    width: 15rem;
+    margin-top: 1rem;
+    background-image: linear-gradient(to right, v.$mainColor 0%, v.$mainColor 50%, lighten(v.$mainColor, 20%) 50%, lighten(v.$mainColor, 20%) 100%);
+  }
+}
